--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
-    "@ionic/angular": "^6.1.9",
+    "@ionic/angular": "^6.6.1",
     "ionicons": "^6.0.3",
     "rxjs": "~6.6.0",
+    "swiper": "^8.4.7",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
